[project]
name = "vla-robotics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "qwen-vl-utils[decord]>=0.0.14",
    "robosuite>=1.5.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "trl>=0.25.1",
    "wandb>=0.23.1",
]
